unpackaged/main/default/objects/litify_pm__Request__c/litify_pm__Request__c.object-meta.xml
<CustomObject>
    <label>Request</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>