unpackaged/main/default/objects/litify_pm__Request__c/fields/litify_ext__Facility_Party__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Facility_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility (Party)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>