unpackaged/main/default/objects/litify_pm__Request__c/fields/litify_pm__Date_Received__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Date_Received__c</fullName>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>