unpackaged/main/default/objects/litify_pm__Request__c/fields/litify_pm__Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Date_Requested__c</fullName>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>