unpackaged/main/default/objects/litify_pm__Request__c/fields/litify_pm__Document__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Document__c</fullName>
    <label>Document #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>