unpackaged/main/default/objects/litify_pm__Request__c/fields/litify_pm__Facility__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.litify_pm__Matter__c</field>
            <operation>equals</operation>
            <valueField>litify_pm__Role__c.litify_pm__Matter__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>litify_pm__Role__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>