unpackaged/main/default/objects/litify_pm__Request__c/fields/litify_pm__Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Facility_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(litify_pm__Facility__c)), 

 HYPERLINK(&quot;/&quot;+ litify_pm__Facility__r.Id  , litify_pm__Facility__r.litify_pm__Party_Name__c ,&quot;_self&quot;) , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Name</label>
    <type>Text</type>
</CustomField>