unpackaged/main/default/objects/litify_pm__Request__c/fields/litify_pm__Record_End_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Record_End_Date__c</fullName>
    <label>Record End Date</label>
    <type>Date</type>
</CustomField>