unpackaged/main/default/objects/litify_pm__Request__c/fields/litify_pm__Request_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>911 Tapes</fullName>
            </value>
            <value>
                <fullName>Court Disposition</fullName>
            </value>
            <value>
                <fullName>Driving Record</fullName>
            </value>
            <value>
                <fullName>Incident Report</fullName>
            </value>
            <value>
                <fullName>Injury Photos</fullName>
            </value>
            <value>
                <fullName>Medical Bills</fullName>
            </value>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Police Report</fullName>
            </value>
            <value>
                <fullName>Property Damage Photos</fullName>
            </value>
            <value>
                <fullName>Receipts</fullName>
            </value>
            <value>
                <fullName>Scene Inspection</fullName>
            </value>
            <value>
                <fullName>Social Media Posts</fullName>
            </value>
            <value>
                <fullName>Spoliation</fullName>
            </value>
            <value>
                <fullName>Total Property Damage</fullName>
            </value>
            <value>
                <fullName>Witness Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>