unpackaged/main/default/objects/litify_pm__Request__c/fields/litify_pm__Requested_by__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Requested_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>