unpackaged/main/default/objects/litify_pm__Request__c/listViews/litify_pm__My_Requests.listView-meta.xml
<ListView>
    <fullName>litify_pm__My_Requests</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__Facility_Name__c</columns>
    <columns>litify_pm__Request_Type__c</columns>
    <columns>litify_pm__Matter__c</columns>
    <columns>litify_pm__Date_Requested__c</columns>
    <columns>litify_pm__Date_Received__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Requests</label>
</ListView>